--- a/salon.css
+++ b/salon.css
@@ -8,7 +8,7 @@ table th{
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #fdcb6e ;
+    background-color: #0c2461;
     color: white;
     text-align: center;
 }
